--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Trainingsplan zum Muskelaufbau</h1>
+    <h1>Trainingsplan</h1>
 
     <!-- Tab-Leiste -->
     <div class="tabs">
