--- a/index.html
+++ b/index.html
@@ -3,203 +3,261 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trainingsplan Webanwendung</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Trainingsplan für Muskelaufbau</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1, h2 {
+            text-align: center;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        table, th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f8f8f8;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0;
+            box-sizing: border-box;
+        }
+
+        .tabs {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
+        .tab-button {
+            padding: 10px 20px;
+            margin-right: 10px;
+            border: none;
+            background-color: #f0f0f0;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .tab-button.active {
+            background-color: #ddd;
+            font-weight: bold;
+        }
+
+        .training-day {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        @media (max-width: 768px) {
+            h1, h2 {
+                font-size: 1.5em;
+            }
+
+            table, th, td {
+                font-size: 0.9em;
+            }
+
+            .tab-button {
+                padding: 10px 15px;
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                padding: 10px;
+            }
+
+            table, th, td {
+                font-size: 0.8em;
+                padding: 8px;
+            }
+
+            .tab-button {
+                padding: 8px 10px;
+                font-size: 12px;
+            }
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Trainingsplan</h1>
+    <h1>Muskelaufbau Trainingsplan</h1>
+    <h2>Wähle deinen Trainingstag</h2>
 
-    <!-- Tab-Leiste -->
     <div class="tabs">
-        <button class="tab-button active" onclick="showDay(1)">Tag 1</button>
+        <button class="tab-button" onclick="showDay(1)">Tag 1</button>
         <button class="tab-button" onclick="showDay(2)">Tag 2</button>
         <button class="tab-button" onclick="showDay(3)">Tag 3</button>
     </div>
 
-    <!-- Tag 1: Brust, Schultern, Trizeps -->
-    <div class="training-day" id="day-1">
-        <h2>Tag 1 – Brust, Schultern, Trizeps</h2>
+    <div id="day-1" class="training-day">
+        <h2>Tag 1: Brust & Trizeps</h2>
         <table>
-            <thead>
-                <tr>
-                    <th>Übung</th>
-                    <th>Sätze</th>
-                    <th>Wiederholungen</th>
-                    <th>Gewicht</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Bankdrücken (Langhantel)</td>
-                    <td>4</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Schrägbankdrücken (Kurzhantel)</td>
-                    <td>3</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Schulterdrücken (Kurzhantel)</td>
-                    <td>4</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Seitheben</td>
-                    <td>3</td>
-                    <td>12-15</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Trizepsdrücken (Kabel)</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Overhead Trizepsdrücken (Kurzhantel)</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-            </tbody>
+            <tr>
+                <th>Übung</th>
+                <th>Sätze</th>
+                <th>Wiederholungen</th>
+                <th>Gewicht (kg)</th>
+            </tr>
+            <tr>
+                <td>Bankdrücken</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Schrägbankdrücken</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Trizeps-Dips</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
         </table>
     </div>
 
-    <!-- Tag 2: Rücken, Bizeps, Bauch -->
-    <div class="training-day" id="day-2" style="display:none;">
-        <h2>Tag 2 – Rücken, Bizeps, Bauch</h2>
+    <div id="day-2" class="training-day" style="display:none;">
+        <h2>Tag 2: Rücken & Bizeps</h2>
         <table>
-            <thead>
-                <tr>
-                    <th>Übung</th>
-                    <th>Sätze</th>
-                    <th>Wiederholungen</th>
-                    <th>Gewicht</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Klimmzüge</td>
-                    <td>4</td>
-                    <td>6-8</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Latziehen (Kabel)</td>
-                    <td>3</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Rudern (Langhantel)</td>
-                    <td>4</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Rudern (Kabel)</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Bizepscurls (Langhantel)</td>
-                    <td>4</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Hammer Curls (Kurzhantel)</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Crunches</td>
-                    <td>3</td>
-                    <td>15-20</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Beinheben</td>
-                    <td>3</td>
-                    <td>12-15</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
+            <tr>
+                <th>Übung</th>
+                <th>Sätze</th>
+                <th>Wiederholungen</th>
+                <th>Gewicht (kg)</th>
+            </tr>
+            <tr>
+                <td>Kreuzheben</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Klimmzüge</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Bizeps-Curls</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
         </table>
     </div>
 
-    <!-- Tag 3: Beine, Waden, Bauch -->
-    <div class="training-day" id="day-3" style="display:none;">
-        <h2>Tag 3 – Beine, Waden, Bauch</h2>
+    <div id="day-3" class="training-day" style="display:none;">
+        <h2>Tag 3: Beine & Schultern</h2>
         <table>
-            <thead>
-                <tr>
-                    <th>Übung</th>
-                    <th>Sätze</th>
-                    <th>Wiederholungen</th>
-                    <th>Gewicht</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Kniebeugen (Langhantel)</td>
-                    <td>4</td>
-                    <td>8-10</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Beinpresse</td>
-                    <td>4</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Ausfallschritte (Kurzhantel)</td>
-                    <td>3</td>
-                    <td>12-15</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Beinstrecker</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Beinbeuger</td>
-                    <td>3</td>
-                    <td>10-12</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Wadenheben (stehend)</td>
-                    <td>4</td>
-                    <td>12-15</td>
-                    <td><input type="text" placeholder="Gewicht"></td>
-                </tr>
-                <tr>
-                    <td>Crunches</td>
-                    <td>3</td>
-                    <td>15-20</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Plank</td>
-                    <td>3</td>
-                    <td>60 Sekunden</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
+            <tr>
+                <th>Übung</th>
+                <th>Sätze</th>
+                <th>Wiederholungen</th>
+                <th>Gewicht (kg)</th>
+            </tr>
+            <tr>
+                <td>Kniebeugen</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Beinpresse</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
+            <tr>
+                <td>Schulterdrücken</td>
+                <td>3</td>
+                <td>8-12</td>
+                <td><input type="text" placeholder="Gewicht eingeben"></td>
+            </tr>
         </table>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Funktion zum Anzeigen des ausgewählten Trainingstags
+        function showDay(day) {
+            // Alle Trainingstage verstecken
+            document.querySelectorAll('.training-day').forEach((dayDiv) => {
+                dayDiv.style.display = 'none';
+            });
+
+            // Den ausgewählten Tag anzeigen
+            document.getElementById(`day-${day}`).style.display = 'block';
+
+            // Alle Tab-Buttons inaktiv setzen
+            document.querySelectorAll('.tab-button').forEach((button) => {
+                button.classList.remove('active');
+            });
+
+            // Den aktiven Button hervorheben
+            document.querySelector(`.tab-button:nth-child(${day})`).classList.add('active');
+        }
+
+        // Funktion, um die Daten in Local Storage zu speichern
+        function saveWeights() {
+            const tables = document.querySelectorAll('table');
+            tables.forEach((table, tableIndex) => {
+                const inputs = table.querySelectorAll('input[type="text"]');
+                inputs.forEach((input, inputIndex) => {
+                    const key = `day-${tableIndex}-exercise-${inputIndex}`;
+                    localStorage.setItem(key, input.value); // Speichert den Wert im Local Storage
+                });
+            });
+        }
+
+        // Funktion, um die Daten aus Local Storage zu laden
+        function loadWeights() {
+            const tables = document.querySelectorAll('table');
+            tables.forEach((table, tableIndex) => {
+                const inputs = table.querySelectorAll('input[type="text"]');
+                inputs.forEach((input, inputIndex) => {
+                    const key = `day-${tableIndex}-exercise-${inputIndex}`;
+                    const storedValue = localStorage.getItem(key);
+                    if (storedValue) {
+                        input.value = storedValue; // Setzt den gespeicherten Wert ins Eingabefeld
+                    }
+                });
+            });
+        }
+
+        // Initialisierung: Daten laden, wenn die Seite geladen wird
+        document.addEventListener("DOMContentLoaded", () => {
+            loadWeights();  // Gewichte aus Local Storage laden
+            showDay(1);     // Ersten Tag anzeigen
+        });
+
+        // Speichert die Gewichte jedes Mal, wenn sich ein Wert ändert
+        document.addEventListener("input", saveWeights);
+    </script>
+
 </body>
 </html>
