--- a/index.html
+++ b/index.html
@@ -128,12 +128,29 @@
                 <td><input type="text" placeholder="Gewicht eingeben"></td>
             </tr>
             <tr>
-                <td>Schrägbankdrücken</td>
-                <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>Schulterdrücken (Kurzhantel)</td>
+                <td>4</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
             </tr>
             <tr>
+                <td>Seitheben</td>
+                <td>3</td>
+                <td>12-15</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Trizepsdrücken (Kabel)</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Overhead Trizepsdrücken (Kurzhantel)</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
                 <td>Trizeps-Dips</td>
                 <td>3</td>
                 <td>8-12</td>
