--- a/index.html
+++ b/index.html
@@ -163,28 +163,52 @@
         <h2>Tag 2: Rücken & Bizeps</h2>
         <table>
             <tr>
-                <th>Übung</th>
-                <th>Sätze</th>
-                <th>Wiederholungen</th>
-                <th>Gewicht (kg)</th>
-            </tr>
-            <tr>
-                <td>Kreuzheben</td>
-                <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
-            </tr>
-            <tr>
                 <td>Klimmzüge</td>
-                <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>4</td>
+                <td>6-8</td>
+                <td><input type="text" placeholder="Gewicht"></td>
             </tr>
             <tr>
-                <td>Bizeps-Curls</td>
+                <td>Latziehen (Kabel)</td>
                 <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>8-10</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Rudern (Langhantel)</td>
+                <td>4</td>
+                <td>8-10</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Rudern (Kabel)</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Bizepscurls (Langhantel)</td>
+                <td>4</td>
+                <td>8-10</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Hammer Curls (Kurzhantel)</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Crunches</td>
+                <td>3</td>
+                <td>15-20</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Beinheben</td>
+                <td>3</td>
+                <td>12-15</td>
+                <td>-</td>
             </tr>
         </table>
     </div>
@@ -199,22 +223,52 @@
                 <th>Gewicht (kg)</th>
             </tr>
             <tr>
-                <td>Kniebeugen</td>
-                <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>Kniebeugen (Langhantel)</td>
+                <td>4</td>
+                <td>8-10</td>
+                <td><input type="text" placeholder="Gewicht"></td>
             </tr>
             <tr>
                 <td>Beinpresse</td>
-                <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>4</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
             </tr>
             <tr>
-                <td>Schulterdrücken</td>
+                <td>Ausfallschritte (Kurzhantel)</td>
                 <td>3</td>
-                <td>8-12</td>
-                <td><input type="text" placeholder="Gewicht eingeben"></td>
+                <td>12-15</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Beinstrecker</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Beinbeuger</td>
+                <td>3</td>
+                <td>10-12</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Wadenheben (stehend)</td>
+                <td>4</td>
+                <td>12-15</td>
+                <td><input type="text" placeholder="Gewicht"></td>
+            </tr>
+            <tr>
+                <td>Crunches</td>
+                <td>3</td>
+                <td>15-20</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Plank</td>
+                <td>3</td>
+                <td>60 Sekunden</td>
+                <td>-</td>
             </tr>
         </table>
     </div>
