--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
 
     <div id="day-2" class="training-day" style="display:none;">
         <h2>Tag 2: Rücken & Bizeps</h2>
-        <table>
+            <table>
+            <tr>
+                <th>Übung</th>
+                <th>Sätze</th>
+                <th>Wiederholungen</th>
+                <th>Gewicht (kg)</th>
+            </tr>
             <tr>
                 <td>Klimmzüge</td>
                 <td>4</td>
